--- a/package.json
+++ b/package.json
@@ -19,6 +19,6 @@
     "url": "https://github.com/integzz/scoopet/issues"
   },
   "main": "index.js",
-  "author": "",
+  "author": "integzz",
   "license": "ISC"
 }
