--- a/package.json
+++ b/package.json
@@ -2,15 +2,17 @@
   "name": "scoopet",
   "version": "0.1.0",
   "homepage": "https://github.com/integzz/scoopet",
-  "description": "A bucket for tossing around",
+  "description": "A Personal Scoop-Apps Collection: Facilitate Academic Research. ",
   "private": true,
   "repository": {
     "url": "git+https://github.com/integzz/scoopet.git",
     "type": "git"
   },
   "scripts": {
+    "checkurls": "powershell -noprofile ./bin/checkurls.ps1",
     "checkver": "powershell -noprofile ./bin/checkver.ps1",
-    "lint": "powershell -noprofile  ./bin/formatjson.ps1",
+    "missing-checkver": "powershell -noprofile ./bin/missing-checkver.ps1",
+    "format": "powershell -noprofile  ./bin/formatjson.ps1",
     "update": "powershell -noprofile ./bin/auto-pr.ps1 -push",
     "sync": "powershell -noprofile ./bin/sync-mirror.ps1",
     "test": "powershell -noprofile ./bin/test.ps1"
