--- a/bucket/neteasemusic.json
+++ b/bucket/neteasemusic.json
@@ -12,7 +12,7 @@
     ],
     "checkver": {
         "url": "https://api.nicoconi.com/updater/neteasemusic/",
-        "regex": "dmusic/cloudmusicsetup([\\d.]+)\\.exe"
+        "regex": "cloudmusicsetup([\\d.]+)\\.exe"
     },
     "autoupdate": {
         "url": "https://d1.music.126.net/dmusic/cloudmusicsetup$version.exe#/dl.7z"
