--- a/bucket/neteasemusic.json
+++ b/bucket/neteasemusic.json
@@ -11,10 +11,14 @@
         ]
     ],
     "checkver": {
-        "url": "https://api.nicoconi.com/updater/neteasemusic/",
-        "regex": "cloudmusicsetup([\\d.]+)\\.exe"
+        "url": "https://scoop-services.azurewebsites.net/checkver?app=neteasemusic",
+        "regex": "dmusic(?<randompath>[\\w/]*)/cloudmusicsetup(?<version>[\\d.]+).exe"
     },
     "autoupdate": {
-        "url": "https://d1.music.126.net/dmusic/cloudmusicsetup$version.exe#/dl.7z"
+        "url": "https://d1.music.126.net/dmusic$matchRandompath/cloudmusicsetup$version.exe#/dl.7z",
+        "hash": {
+            "url": "https://scoop-services.azurewebsites.net/checkver?app=neteasemusic",
+            "jp": "$.updateFiles[0].hash"
+        }
     }
 }
