--- a/.github/workflows/issue.yml
+++ b/.github/workflows/issue.yml
@@ -1,16 +1,17 @@
+name: Issues
+
 on:
   issues:
     types: [opened, labeled]
-name: Issues
+
 jobs:
   issueHandler:
     runs-on: ubuntu-latest
-    name: Issue Verification
+    name: Issue Handler
     steps:
       - uses: actions/checkout@main
-      - name: Verify Issue
-        uses: Ash258/Scoop-GithubActions@stable
+      - name: Issue Handler
+        uses: integzz/Scoop-GithubActions@stable
         if: github.event.action == 'opened' || (github.event.action == 'labeled' && contains(github.event.issue.labels.*.name, 'verify'))
         env:
-          GITH_EMAIL: youremail@email.com
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
