--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -1,7 +1,9 @@
+name: Pull Requests
+
 on:
-  issue_comment:
-    types: [created]
-name: Commented Pull Request
+  pull_request:
+    types: [opened]
+
 jobs:
   pullRequestHandler:
     name: Pull Request Validator
@@ -9,8 +11,6 @@ jobs:
     steps:
       - uses: actions/checkout@main
       - name: Pull Request Validation
-        uses: Ash258/Scoop-GithubActions@stable
-        if: startsWith(github.event.comment.body, '/verify')
+        uses: integzz/Scoop-GithubActions@stable
         env:
-          GITH_EMAIL: youremail@email.com
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
