--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -7,10 +7,10 @@ on:
 jobs:
   pullRequestHandler:
     name: Pull Request Handler
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
     steps:
       - uses: actions/checkout@main
       - name: Pull Request Handler
-        uses: Ash258/Scoop-GithubActions@stable
+        uses: Ash258/Scoop-GithubActions@stable-win
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
