--- a/.github/workflows/schedule.yml
+++ b/.github/workflows/schedule.yml
@@ -1,16 +1,17 @@
 on:
   schedule:
   - cron: '*/30 * * * *'
-  '
+    
 name: Excavator
 jobs:
   excavate:
     name: Excavate
     runs-on: windows-latest
     steps:
-    - uses: actions/checkout@master
+    - uses: actions/checkout@main
     - name: Excavate
       uses: Ash258/Scoop-GithubActions@stable-win
       env:
+        SHOVEL: '1'
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        SKIP_UPDATED: '1'
+        SKIP_UPDATED: '1
