--- a/.github/workflows/issue_comment.yml
+++ b/.github/workflows/issue_comment.yml
@@ -9,7 +9,7 @@ jobs:
     name: Pull Request Validator
     runs-on: windows-latest
     steps:
-      - uses: actions/checkout@main
+      - uses: actions/checkout@v2
       - name: Pull Request Validation
         uses: Ash258/Scoop-GithubActions@stable-win
         if: startsWith(github.event.comment.body, '/verify')
