--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "scoopet",
     "version": "0.1.0",
-    "homepage": "https://github.com/integzz/scoopet",
+    "homepage": "https://github.com/ivaquero/scoopet",
     "description": "A Personal Scoop Bucket for Facilitating Academic Research.",
     "private": true,
     "repository": {
@@ -21,6 +21,6 @@
         "url": "https://github.com/integzz/scoopet/issues"
     },
     "main": "index.js",
-    "author": "integzz",
+    "author": "ivaquero",
     "license": "ISC"
 }
