--- a/bucket/weasel.json
+++ b/bucket/weasel.json
@@ -13,7 +13,7 @@
     },
     "post_install": "Remove-Item \"$dir\\`$PLUGINSDIR\" -Recurse",
     "uninstaller": {
-        "script": "Invoke-ExternalCommand "$dir\uninstall.exe" -ArgumentList '/S' -RunAs | Out-Null"
+        "script": "Invoke-ExternalCommand \"$dir/uninstall.exe\" -ArgumentList '/S' -RunAs | Out-Null"
     },
     "checkver": {
         "url": "https://github.com/rime/weasel/releases",
