--- a/.github/workflows/excavator.yml
+++ b/.github/workflows/excavator.yml
@@ -1,14 +1,17 @@
 on:
-  pull_request:
-    types: [opened]
-name: Pull Requests
+  workflow_dispatch:
+  schedule:
+    # run every 4 hours
+    - cron: "20 */4 * * *"
+name: Excavator
 jobs:
-  pullRequestHandler:
-    name: PullRequestHandler
+  excavate:
+    name: Excavate
     runs-on: windows-latest
     steps:
       - uses: actions/checkout@main
-      - name: PullRequestHandler
+      - name: Excavate
         uses: ScoopInstaller/GithubActions@main
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          SKIP_UPDATED: "1"
