--- a/.github/workflows/issue.yml
+++ b/.github/workflows/issue.yml
@@ -1,17 +1,15 @@
-name: Issues
-
 on:
   issues:
     types: [opened, labeled]
-
+name: Issues
 jobs:
   issueHandler:
+    name: IssueHandler
     runs-on: windows-latest
-    name: Issue Handler
     steps:
-      - uses: actions/checkout@v3
-      - name: Issue Handler
-        uses: Ash258/Scoop-GithubActions@stable-win
+      - uses: actions/checkout@main
+      - name: IssueHandler
+        uses: ScoopInstaller/GithubActions@main
         if: github.event.action == 'opened' || (github.event.action == 'labeled' && contains(github.event.issue.labels.*.name, 'verify'))
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
