--- a/.github/workflows/issue_comment.yml
+++ b/.github/workflows/issue_comment.yml
@@ -1,18 +1,15 @@
-name: Commented Pull Request
-
 on:
   issue_comment:
     types: [created]
-
+name: Commented Pull Request
 jobs:
   pullRequestHandler:
-    name: Pull Request Validator
+    name: PullRequestHandler
     runs-on: windows-latest
     steps:
-      - uses: actions/checkout@v3
-      - name: Pull Request Validation
-        uses: Ash258/Scoop-GithubActions@stable-win
+      - uses: actions/checkout@main
+      - name: PullRequestHandler
+        uses: ScoopInstaller/GithubActions@main
         if: startsWith(github.event.comment.body, '/verify')
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          SKIP_UPDATED: '1'
