--- a/bucket/weasel.json
+++ b/bucket/weasel.json
@@ -7,7 +7,8 @@
 	"installer": {
 		"script": [
 			"& \"$dir\\WeaselSetup.exe\" /i",
-			"& \"$dir\\WeaselDeployer.exe\" /install", "& \"$dir\\WeaselServer.exe\""
+			"& \"$dir\\WeaselDeployer.exe\" /install",
+			"& \"$dir\\WeaselServer.exe\""
 		]
 	},
 	"post_install": "Remove-Item \"$dir\\`$PLUGINSDIR\" -Recurse",
